--- a/style.css
+++ b/style.css
@@ -26,10 +26,17 @@ body {
     display: flex;
     flex-direction: column;
 }
+
+input {
+    height: 3em;
+    padding: .75em 1em;
+}
+
 /* TYPOGRAPHY */
 
 h1 {
     margin: 0;
+    letter-spacing: 1px;
 }
 
 .header-subtitle {
@@ -77,7 +84,8 @@ h1 {
     background-size: cover;
     background-repeat: no-repeat;
     background-position: bottom -50px center;
-    
+    background-blend-mode: multiply;
+    background-color: rgba(0, 0, 0, .35);
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -95,7 +103,7 @@ h1 {
     display: flex;
     align-items: center;
     padding: 1.5em 0;
-    border-bottom: 1px solid grey;
+    border-bottom: 1px solid #DEDEDE;
 }
 
 .item-logo {
@@ -169,6 +177,8 @@ h1 {
     background: #16DB99;
     color: white;
     padding: 1em 0;
+    border-radius: 3px;
+    font-weight: bold;
 }
 
 .total-price-wrapper {
@@ -184,4 +194,57 @@ h1 {
 
 .total-price {
     margin-left: auto;
+}
+
+
+/* PAYMENT SCREEN */
+
+
+.payment-screen {
+    background-color: white;
+    box-shadow: 0 0 25px 5px #aaaaaa;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    margin: auto;
+    max-width: 400px;
+    width: 75vw;
+    height: min-content;
+    text-align: center;
+    padding: 1em 1em 3em;
+    font-family: Verdana, sans-serif;
+    display: none;
+
+}
+
+.payment-screen-form {
+    display: flex;
+    flex-direction: column;
+    gap: 1em;
+}
+
+.pay-btn {
+    display: block;
+    width: 100%;
+    border: none;
+    background: #16DB99;
+    color: white;
+    padding: 1em 0;
+    border-radius: 3px;
+    font-weight: bold;
+    border-color: #757575;
+}
+
+
+/* successful */
+
+.successfull {
+    background: #ECFDF5;
+    color: #065F46;
+    text-align: center;
+    font-size: 1.5rem;
+    padding: .5em 1em;
+    margin-top: 1em;
 }
