--- a/style.css
+++ b/style.css
@@ -226,7 +226,7 @@ h1 {
 }
 
 .pay-btn {
-    display: block;
+    display: block; 
     width: 100%;
     border: none;
     background: #16DB99;
@@ -235,6 +235,16 @@ h1 {
     border-radius: 3px;
     font-weight: bold;
     border-color: #757575;
+}
+
+.close-btn {
+    border: none;
+    background-color: rgba(0, 0, 0, 0);
+    position: absolute;
+    font-size: 2em;
+    top: 0em;
+    right: 0em;
+    
 }
 
 
