--- a/style.css
+++ b/style.css
@@ -242,8 +242,8 @@ h1 {
     background-color: rgba(0, 0, 0, 0);
     position: absolute;
     font-size: 2em;
-    top: 0em;
-    right: 0em;
+    top: 0;
+    right: 0;
     
 }
 
